🏷️ Update repository references from eventscan to calclik
- Update GitHub repository references in documentation
- Update Safari extension title from EventScan to CalClik
- Align all project references with CalClik branding
- Repository renamed: the-lucky-clover/eventscan → the-lucky-clover/calclik

--- a/safari-extension/popup.html
+++ b/safari-extension/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>EventScan</title>
+  <title>CalClik</title>
   <style>
     body { width: 300px; padding: 10px; font-family: Arial, sans-serif; }
     button { margin: 5px; padding: 8px; }
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <h3>EventScan</h3>
+  <h3>CalClik</h3>
   <div id="settingsSection">
     <div id="apiKeySection">
       <input type="password" id="apiKey" placeholder="OpenAI API Key">
